thuc hanh vong lap do while

--- a/thu hanh voi while.html
+++ b/thu hanh voi while.html
@@ -6,11 +6,18 @@
 </head>
 <body>
 <script>
-    let num = prompt("Enter your number: ");
-    let total = 0;
-    while (num != -1){
-        total += num;
-        alert(total)
+    // let num = prompt("Enter your number: ");
+    // let total = 0;
+    // while (num != -1){
+    //     total += num;
+    //     alert(total)
+    // }
+    let i = 1;
+
+    while (i < 100) {
+        //phân thân vòng lặp
+        document.write("<hr width = " + i + "%>");
+        i++;
     }
 </script>
 </body>
